# RMM-Forensic-Analyzer

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt
rmm_forensic/: __init__.py  __main__.py  config.py  utils.py
rmm_forensic/analyzer/: __init__.py  correlator.py  country.py  incident.py  risk_scoring.py
rmm_forensic/apis/: __init__.py  abuseipdb.py  cache.py  criminalip.py  enrichment.py  tor_exit_nodes.py  virustotal.py
rmm_forensic/discovery/: __init__.py  archive.py  engine.py  kape.py  known_paths.py  signatures.py
rmm_forensic/models/: __init__.py  base.py  enrichment.py  incident.py  summary.py
rmm_forensic/parsers/: __init__.py  base.py  registry.py
rmm_forensic/parsers/anydesk/: __init__.py  ad_trace.py  connection_trace.py  legacy_models.py  parser.py
rmm_forensic/parsers/chrome_remote_desktop/: __init__.py  crd_logs.py  parser.py
rmm_forensic/parsers/rustdesk/: __init__.py  parser.py  rustdesk_logs.py
rmm_forensic/parsers/screenconnect/: __init__.py  parser.py  session_db.py  session_logs.py
rmm_forensic/parsers/splashtop/: __init__.py  parser.py  splashtop_logs.py
rmm_forensic/parsers/teamviewer/: __init__.py  connections.py  logfile.py  parser.py
rmm_forensic/reports/: __init__.py  common.py  csv_report.py  html_report.py  xlsx_report.py
tests/: test_parsers.py
