[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmm-forensic-analyzer"
version = "3.0.0"
description = "Herramienta DFIR para análisis forense profundo de logs RMM (AnyDesk, TeamViewer, ScreenConnect, Chrome RD, Splashtop, RustDesk)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["dfir", "forensics", "rmm", "anydesk", "teamviewer", "screenconnect", "incident-response", "log-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
dependencies = [
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
rmm-forensic = "rmm_forensic.__main__:main"
anydesk-forensic = "rmm_forensic.__main__:main"

[project.urls]
Homepage = "https://github.com/m31r0n/RMM-Forensic-Analyzer"
Issues   = "https://github.com/m31r0n/RMM-Forensic-Analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rmm_forensic*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
